# csst-msc-instrument-effect

./: BKGscript.py  CSST_2021-12-30_CCD23_epoch20.pth  Dockerfile  MSC_crmask.ini  Makefile  README.md  cleanup.sh  csst_msc_iec.sh  demo.py  instrument_effect_wrapper.py  request.json  requirements.txt  run.py  run.sh  run_18.py  setup.cfg  setup.md  setup.py
csst_msc_instrument_effect/: msc_crmask.py  msc_iec.py  msc_preprocessing.py
lib/: MSC_crmask.py  MSC_preprocessing.py
preprocessing/: MSC_preprocessing.py
tests/: test_Pipeline.py  test_iec.py
