[metadata]
# replace with your username:
name = csst_msc_instrument_effect
author = CSST
author_email = xiezhou@cnlab.net
description = MSC data Preprocessing Pipeline.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, astrophysics, cosmology, space, CSST
url = https://github.com/astronomical-data-processing/csst-msc-instrument-effect
project_urls =
    Bug Tracker = https://github.com/astronomical-data-processing/csst-msc-instrument-effect/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    astropy>=4.2.1
    ccdproc>=2.1.1
    deepCR>=0.1.5